--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://avatars0.githubusercontent.com/u/8430861?v=3&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   email: thogotmail@gmail.com
-  facebook: facebook.com/thogotmail
+  facebook: thogotmail
   github: forthowin
   #rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   #twitter: jekyllrb
